no onload for form

--- a/main/src/main/java/org/mobilitydata/gtfsvalidator/viewer/form.html
+++ b/main/src/main/java/org/mobilitydata/gtfsvalidator/viewer/form.html
@@ -4,7 +4,7 @@
         <title>GTFS Validator</title>
         <link rel="stylesheet" href="index.css" type="text/css" />
     </head>
-    <body onload="ReportView.render()">
+    <body>
         <h1>GTFS Validator</h1>
         <form class="table-like" method=post action="./validate" enctype="multipart/form-data">
             <div> 
