Adds validator version in the HTML report [acceptance test skip]

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -146,7 +146,9 @@
     </tbody>
 </table>
 <H2>Settings and version</H2>
-<p>This validation report was generated using the <a href="https://github.com/MobilityData/gtfs-validator">GTFS Schedule validator</a> using the following arguments.</p>
+<p th:inline="text" >
+    This validation report was generated using the <a href="https://github.com/MobilityData/gtfs-validator">GTFS Schedule validator</a> version [[${version}]] using the following arguments.
+</p>
 <table>
     <thead>
     <tr>
