Adds validation date in the HTML report [acceptance test skip]

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -146,9 +146,9 @@
     </tbody>
 </table>
 <H2>Settings and version</H2>
-<p th:inline="text" >
-    This validation report was generated using the <a href="https://github.com/MobilityData/gtfs-validator">GTFS Schedule validator</a> version [[${version}]] using the following arguments.
-</p>
+<p th:text="'Validator version: ' + ${version}">
+<p th:text="'Validation date and time: ' + ${date}">
+<p>This validation report was generated using the <a href="https://github.com/MobilityData/gtfs-validator">GTFS Schedule validator</a> at using the following arguments.</p>
 <table>
     <thead>
     <tr>
