--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -148,7 +148,7 @@
 <H2>Settings and version</H2>
 <p th:text="'Validator version: ' + ${version}">
 <p th:text="'Validation date and time: ' + ${date}">
-<p>This validation report was generated using the <a href="https://github.com/MobilityData/gtfs-validator">GTFS Schedule validator</a> at using the following arguments.</p>
+<p>This validation report was generated using the <a href="https://github.com/MobilityData/gtfs-validator">GTFS Schedule validator</a> using the following arguments.</p>
 <table>
     <thead>
     <tr>
