Modifies report.html [acceptance test skip]

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -152,7 +152,7 @@
 <table>
     <thead>
     <tr>
-        <th>Argument Description</th><th>Value</th>
+        <th>Parameter description</th><th>Value</th>
     </tr>
     </thead>
     <tbody>
