--- a/web/client/src/app.html
+++ b/web/client/src/app.html
@@ -6,6 +6,10 @@
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <meta name="viewport" content="width=device-width" />
   <title>Canonical GTFS Schedule Validator</title>
+  <script
+    src="https://js.sentry-cdn.com/4edf1e8af432463e84eab1285a81d4f7.min.js"
+    crossorigin="anonymous"
+  ></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@600&family=Mulish:wght@500;800&display=swap"
