--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -111,62 +111,60 @@
             flex-wrap: wrap;
         }
 
+        .summary-row {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+        }
+
+        .summary-cell {
+            padding: 5px;
+            box-sizing: border-box;
+        }
+
         .summary .summary_info {
-            flex: 1 1 calc(25% - 4px);
+            flex: 1 1 calc(25% - 10px);
             margin: 0 5px 20px 0;
         }
 
         .summary .summary_list {
-            flex: 1 1 calc(12% - 4px);
+            flex: 1 1 calc(12% - 10px);
             margin: 0 5px 20px 0;
         }
-
-        .summary dt {
-            display: inline-block;
+       .summary h4 {
+            white-space: nowrap;
         }
 
-        .summary dd {
-            display: inline-block;
-            font-weight: bold;
-            width: 130px;
-            margin-inline-start: 0;
+.summary dt {
+    display: inline-block;
+}
+
+.summary dd {
+    display: inline-block;
+    font-weight: bold;
+    width: 130px;
+    margin-inline-start: 0;
+}
+
+.summary ul, .summary ol {
+    padding-left: 20px;
+}
+
+.summary li {
+    padding-left: 0px;
+}
+        /* Responsive behavior */
+        @media (max-width: 767px) {
+            .summary .summary_info, .summary .summary_list {
+                flex-basis: 100%;
+            }
         }
 
-        .summary ul, .summary ol {
-            padding-left: 20px;
-        }
-
-        .summary li {
-            padding-left: 0px;
-        }
-
-        .summary table {
-            table-layout: fixed;
-            width: 100%;
-        }
-
-        .summary td, .summary th {
-            vertical-align: top;
-            word-wrap: break-word;
-            word-break: break-word;
-            hyphens: auto;
-        }
-
-        .summary ul, .summary ol, .summary dl {
-            margin-top: 0px;
-            margin-block-start: 0px;
-        }
-
-        /* Set width of first two cells to 50% */
-        .summary table > th:nth-child(-n + 2),
-        .summary table > td:nth-child(-n + 2) {
-            width: 50%;
-        }
-
-        /* Balance remaining cells */
-        .summary table > th:nth-child(n + 3),
-        .summary table > td:nth-child(n + 3) {
-            width: calc(50% / 3);
+        hr {
+            border: none;
+            border-top: 2px solid #000;
+            margin-top: 5px;
+            margin-bottom: 15px;
         }
 
         .spec-feature {
@@ -196,61 +194,60 @@
     <h2>Summary</h2>
 
     <div class="summary">
-        <table>
-            <thead>
-            <tr>
-                <th>Agencies included</th>
-                <th>Feed Info</th>
-                <th>Files included</th>
-                <th>Counts</th>
-                <th>GTFS Components included</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td class="summary_info">
-                    <ul>
-                        <li th:each="agency: ${metadata.agencies}">
-                            <span th:text="${agency.name}"></span>
-                            <ul>
-                                <li><b>website: </b><a th:href="${agency.url}" th:text="${agency.url}"></a></li>
-                                <li><b>phone number: </b><span th:text="${agency.phone}" /></li>
-                                <li><b>email: </b><span th:text="${agency.email.isEmpty()} ? 'Not provided' : ${agency.email}" /></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </td>
-                <td class="summary_info">
-                    <dl>
-                        <div th:each="info: ${metadata.feedInfo}">
-                            <dd th:text="${info.key} + ':'" />
-                            <dt>
-                                <span th:if="${info.key.contains('URL')}">
-                                    <a th:href="${info.value}" target="_blank" th:text="${info.value}" />
-                                </span>
-                                <span th:unless="${info.key.contains('URL')}" th:text="${info.value}" />
-                            </dt>
-                        </div>
-                    </dl>
-                </td>
-                <td class="summary_list">
-                    <ol>
-                        <li th:each="file: ${metadata.foundFiles}" th:text="${file}"></li>
-                    </ol>
-                </td>
-                <td class="summary_list">
-                    <ul>
-                        <li th:each="count: ${metadata.counts}"><span th:text="${count.key} + ': ' + ${count.value}" /></li>
-                    </ul>
-                <td class="summary_list">
-                    <div>
-                        <span class="spec-feature" th:each="feature: ${metadata.specFeatures}" th:if="${feature.value == 'Yes'}" th:text="${feature.key}" />
+        <div class="summary-row">
+            <div class="summary-cell summary_info">
+                <h4>Agencies included</h4>
+                <hr />
+                <ul>
+                    <li th:each="agency: ${metadata.agencies}">
+                        <span th:text="${agency.name}"></span>
+                        <ul>
+                            <li><b>website: </b><a th:href="${agency.url}" th:text="${agency.url}"></a></li>
+                            <li><b>phone number: </b><span th:text="${agency.phone}" /></li>
+                            <li><b>email: </b><span th:text="${agency.email.isEmpty()} ? 'Not provided' : ${agency.email}" /></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="summary-cell summary_info">
+                <h4>Feed Info</h4>
+                <hr />
+                <dl>
+                    <div th:each="info: ${metadata.feedInfo}">
+                        <dd th:text="${info.key} + ':'" />
+                        <dt>
+                        <span th:if="${info.key.contains('URL')}">
+                            <a th:href="${info.value}" target="_blank" th:text="${info.value}" />
+                        </span>
+                            <span th:unless="${info.key.contains('URL')}" th:text="${info.value}" />
+                        </dt>
                     </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                </dl>
+            </div>
+            <div class="summary-cell summary_list">
+                <h4>Files included</h4>
+                <hr />
+                <ol>
+                    <li th:each="file: ${metadata.foundFiles}" th:text="${file}"></li>
+                </ol>
+            </div>
+            <div class="summary-cell summary_list">
+                <h4>Counts</h4>
+                <hr />
+                <ul>
+                    <li th:each="count: ${metadata.counts}"><span th:text="${count.key} + ': ' + ${count.value}" /></li>
+                </ul>
+            </div>
+            <div class="summary-cell summary_list">
+                <h4>GTFS Components included</h4>
+                <hr />
+                <div>
+                    <span class="spec-feature" th:each="feature: ${metadata.specFeatures}" th:if="${feature.value == 'Yes'}" th:text="${feature.key}" />
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <h2>Specification Compliance report</h2>
 
